optimize formatters, add object pool